[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Tooltip.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 1 )

[node name="Tooltip" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="END" type="ColorRect" parent="."]
margin_right = 62.0
margin_bottom = 8.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STR" type="ColorRect" parent="."]
margin_top = 13.0
margin_right = 62.0
margin_bottom = 21.0
color = Color( 1, 1, 1, 0 )

[node name="SPE" type="ColorRect" parent="."]
margin_top = 26.0
margin_right = 62.0
margin_bottom = 34.0
color = Color( 1, 1, 1, 0 )

[node name="Background" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 44.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "afasf"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="END" to="." method="_on_END_mouse_entered"]
[connection signal="mouse_exited" from="END" to="." method="_on_END_mouse_exited"]
[connection signal="mouse_entered" from="STR" to="." method="_on_STR_mouse_entered"]
[connection signal="mouse_exited" from="STR" to="." method="_on_STR_mouse_exited"]
[connection signal="mouse_entered" from="SPE" to="." method="_on_SPE_mouse_entered"]
[connection signal="mouse_exited" from="SPE" to="." method="_on_SPE_mouse_exited"]
